--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,170 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{basuchowdhuri2016detecting,
+ author = {Basuchowdhuri, Partha and Sikdar, Satyaki and Shreshtha, Sonu and Majumder, Subhashis},
+ title = {{Detecting} {Community} {Structures} in {Social} {Networks} by {Graph} {Sparsification}},
+ booktitle = {ACM IKDD Conference on Data Science (CODS)},
+ year = {2016},
+ addendum = {AR:5\%}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{basuchowdhuri2019fast,
+ author = {Basuchowdhuri, Partha and Sikdar, Satyaki and Nagarajan, Varsha and Mishra, Khusbu and Gupta, Surabhi and Majumder, Subhashis},
+ title = {{Fast} {Detection} of {Community} {Structures} using {Graph} {Traversal} in {Social} {Networks}},
+ journal = {Knowledge and Information Systems (KAIS)},
+ year = {2018},
+ publisher = {Springer},
+ addendum = {IF:2.7},
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@inproceedings{hibshman2019towards,
+ author = {Hibshman, Justus and Sikdar, Satyaki and Weninger, Tim},
+ title = {{Towards} {Interpretable} {Graph} {Modeling} with {Vertex} {Replacement} {Grammars}},
+ booktitle = {IEEE International Conference on Big Data (BigData)},
+ year = {2019},
+ addendum = {AR:19\%}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{hibshman2021joint,
+ author = {Hibshman, Justus Isaiah and Cedre, Daniel Gonzalez and Sikdar, Satyaki and Weninger, Tim},
+ title = {{Joint} {Subgraph}-to-{Subgraph} {Transitions}: {Generalizing} {Triadic} {Closure} for {Powerful} and {Interpretable} {Graph} {Modeling}},
+ booktitle = {ACM International Conference on Web Search and Data Mining (WSDM)},
+ year = {2021},
+ addendum = {AR:18\%}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@incollection{kogge2019a,
+ author = {Sikdar, Satyaki},
+ editor = {Kogge, Peter M.},
+ booktitle = {A Survey of Graph Kernels},
+ title = {{Spectral} {Community} {Detection}},
+ publisher = {University of Notre Dame},
+ year = {2019},
+ doi = {10.7274/r0-e7wb-da60},
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@incollection{kogge2019b,
+ author = {Sikdar, Satyaki},
+ editor = {Kogge, Peter M.},
+ booktitle = {A Survey of Graph Processing Paradigms},
+ publisher = {University of Notre Dame},
+ title = {{NetworkX} {Graph} {Library}},
+ year = {2019},
+ doi = {10.7274/r0-z6dc-9c71},
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@inproceedings{pennycuff2018synchronous,
+ author = {Pennycuff, Corey and Sikdar, Satyaki and Vajiac, Catalina and Chiang, David and Weninger, Tim},
+ title = {{Synchronous} {Hyperedge} {Replacement} {Graph} {Grammars}},
+ booktitle = {International Conference on Graph Transformation (ICGT)},
+ year = {2018},
+}
+
+@inproceedings{sikdar2019modeling,
+ author = {Sikdar, Satyaki and Hibshman, Justus and Weninger, Tim},
+ title = {{Modeling} {Graphs} with {Vertex} {Replacement} {Grammars}},
+ booktitle = {IEEE International Conference on Data Mining (ICDM)},
+ year = {2019},
+ addendum = {AR:9\%}
+}
+
+@article{sikdar2022infinity,
+  title={The {Infinity} {Mirror} {Test} for {Graph} {Models}},
+  author={Sikdar, Satyaki and Cedre, Daniel Gonzalez and Ford, Trenton W and Weninger, Tim},
+  journal={IEEE Transactions on Knowledge and Data Engineering (TKDE)},
+  year={2022},
+  publisher={IEEE}, 
+  addendum={IF:8.9},
+}
+
+@inproceedings{sikdar2022attributed,
+  title={{Attributed} {Graph} {Modeling} with {Vertex} {Replacement} {Grammars}},
+  author={Sikdar, Satyaki and Shah, Neil and Weninger, Tim},
+  booktitle={ACM International Conference on Web Search and Data Mining (WSDM)},
+  year={2022},
+  addendum={AR:18\%}
+}
+
+@article{erkol2023consistency,
+  title={{Consistency} {Pays} off in {Science}},
+  author={Erkol, {\c{S}}irag and Sikdar, Satyaki and Radicchi, Filippo and Fortunato, Santo},
+  journal={Quantitative Science Studies (QSS)},
+  year={2023},
+  publisher={MIT Press},
+  impactfactor={},
+}
+
+
+@misc{venturini2023collaborationIC2S2,
+  title={{Collaboration} and {Topic} {Switches} in {Science}},
+  author={Sikdar, Satyaki and Venturini, Sara and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo},
+  author+an = {1=jointfirst;2=jointfirst},
+  howpublished={International Conference on Computational Social Science (IC\textsuperscript{2}S\textsuperscript{2}), Plenary Talk},
+  year={2023},
+  addendum={AR:1.75\%},
+}
+
+@misc{venturini2023collaborationICSSI,
+  title={{Collaboration} and {Topic} {Switches} in {Science}},
+  author={Sikdar, Satyaki and Venturini, Sara and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo},
+  author+an = {1=jointfirst;2=jointfirst},
+  howpublished={International Conference on Science of Science and Innvoation (ICSSI), Contributed Talk},
+  year={2023},
+}
+
+@misc{venturini2023collaborationNetsci,
+  title={{Collaboration} and {Topic} {Switches} in {Science}},
+  author={Sikdar, Satyaki and Venturini, Sara and  Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo},
+  author+an = {1=jointfirst;2=jointfirst},
+  howpublished={International Conference on Network Science (NetSci), Contributed Talk},
+  year={2023},
+}
+
+
+@misc{venturini2023covidIC2S2,
+  title={The {COVID}-19 {Research} {Outbreak}: {How} the {Pandemic} {Culminated} in a {Surge} of {New} {Researchers}},
+  author={Sikdar, Satyaki and Venturini, Sara and Charpignon, Marie Laure and Kumar, Sagar and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo and Majumder, Maimuna S.},
+  howpublished={International Conference on Computational Social Science (IC\textsuperscript{2}S\textsuperscript{2}), Contributed Talk},
+  year={2023},
+  addendum={AR:31\%},
+  author+an = {1=jointfirst;2=jointfirst},
+}
+
+@misc{venturini2023covidICSSI,
+  title={The {COVID}-19 {Research} {Outbreak}: {How} the {Pandemic} {Culminated} in a {Surge} of {New} {Researchers}},
+  author={Sikdar, Satyaki and Venturini, Sara and Charpignon, Marie Laure and Kumar, Sagar and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo and Majumder, Maimuna S.},
+  howpublished={International Conference on Science of Science and Innvoation (ICSSI), Contributed Talk},
+  year={2023},
+  author+an = {1=jointfirst;2=jointfirst},
+}
+
+
+% put the preprints here 
+
+@unpublished{ghavasieh2023persistent,
+  title={Persistent {Energy} {Localization} {Determines} the {Mesoscale} {Functional} {Organization} of {Complex} {Networks}},
+  author={Sikdar, Satyaki and Ghavasieh, Arsham and De Domenico, Manlio and Fortunato, Santo},
+  author+an = {1=jointfirst;2=jointfirst},
+  howpublished={Forthcoming},
+  year={2023},
+  keywords={preprint},
+}
+
+
+@article{venturini2023collaboration,
+  title={{Collaboration} and {Topic} {Switches} in {Science}},
+  author={Sikdar, Satyaki and Venturini, Sara and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo},
+  author+an = {1=jointfirst;2=jointfirst},
+  %howpublished={arXiv preprint arXiv:2304.06826}, 
+  journal={Scientific Reports (to appear)},
+  year={2023},
+  keywords={preprint},
+  addendum={IF:4.6},
+}
+
+@unpublished{venturini2023covidpre,
+  title={The {COVID}-19 {Research} {Outbreak}: {How} the {Pandemic} {Culminated} in a {Surge} of {New} {Researchers}},
+  author={Sikdar, Satyaki and Venturini, Sara and Charpignon, Marie Laure and Kumar, Sagar and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo and Majumder, Maimuna S.},
+  author+an = {1=jointfirst;2=jointfirst},
+  howpublished={Under review at Science},
+  year={2023},
+  keywords={preprint},
 }
