--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@ Buttons:
 @article{basuchowdhuri2016detecting,
  author = {Basuchowdhuri, Partha and Sikdar, Satyaki and Shreshtha, Sonu and Majumder, Subhashis},
  title = {{Detecting} {Community} {Structures} in {Social} {Networks} by {Graph} {Sparsification}},
- journal = {ACM IKDD Conference on Data Science (CODS)},
+ journal = {ACM IKDD Conference on Data Science},
  year = {2016},
  addendum = {AR:5\%},
  bibtex_show = {true},
@@ -31,7 +31,7 @@ Buttons:
 @article{basuchowdhuri2019fast,
  author = {Basuchowdhuri, Partha and Sikdar, Satyaki and Nagarajan, Varsha and Mishra, Khusbu and Gupta, Surabhi and Majumder, Subhashis},
  title = {{Fast} {Detection} of {Community} {Structures} using {Graph} {Traversal} in {Social} {Networks}},
- journal = {Knowledge and Information Systems (KAIS)},
+ journal = {Knowledge and Information Systems},
  year = {2018},
  publisher = {Springer},
  addendum = {IF:2.7},
@@ -52,7 +52,8 @@ Buttons:
 @article{hibshman2019towards,
  author = {Hibshman, Justus and Sikdar, Satyaki and Weninger, Tim},
  title = {{Towards} {Interpretable} {Graph} {Modeling} with {Vertex} {Replacement} {Grammars}},
- journal = {Big Data},
+ abbr = {BigData},
+ journal = {IEEE International Conference on Big Data},
  year = {2019},
  addendum = {AR:19\%},
  bibtex_show = {true},
@@ -61,10 +62,11 @@ Buttons:
 @article{hibshman2021joint,
  author = {Hibshman, Justus Isaiah and Cedre, Daniel Gonzalez and Sikdar, Satyaki and Weninger, Tim},
  title = {{Joint} {Subgraph}-to-{Subgraph} {Transitions}: {Generalizing} {Triadic} {Closure} for {Powerful} and {Interpretable} {Graph} {Modeling}},
- journal = {Web Search and Data Mining (WSDM)},
+ journal = {ACM International Conference on Web Search and Data Mining},
  year = {2021},
  addendum = {AR:18\%},
  bibtex_show = {true},
+ abbr = {WSDM},
 }
 
 @incollection{kogge2019a,
@@ -90,7 +92,8 @@ Buttons:
 @article{pennycuff2018synchronous,
  author = {Pennycuff, Corey and Sikdar, Satyaki and Vajiac, Catalina and Chiang, David and Weninger, Tim},
  title = {{Synchronous} {Hyperedge} {Replacement} {Graph} {Grammars}},
- journal = {International Conference on Graph Transformation (ICGT)},
+ journal = {International Conference on Graph Transformation},
+ abbr = {ICGT},
  year = {2018},
  bibtex_show = {true},
 }
@@ -98,7 +101,8 @@ Buttons:
 @article{sikdar2019modeling,
  author = {Sikdar, Satyaki and Hibshman, Justus and Weninger, Tim},
  title = {{Modeling} {Graphs} with {Vertex} {Replacement} {Grammars}},
- journal = {IEEE ICDM},
+ journal = {IEEE International Conference on Data Mining},
+ abbr = {ICDM},
  year = {2019},
  addendum = {AR:9\%},
  code = {https://github.com/satyakisikdar/CNRG},
@@ -108,7 +112,8 @@ Buttons:
 @article{sikdar2022infinity,
   title={The {Infinity} {Mirror} {Test} for {Graph} {Models}},
   author={Sikdar, Satyaki and Cedre, Daniel Gonzalez and Ford, Trenton W and Weninger, Tim},
-  journal={Transactions on Knowledge and Data Engineering (TKDE)},
+  journal={Transactions on Knowledge and Data Engineering},
+  abbr = {TKDE},
   year={2022},
   publisher={IEEE}, 
   addendum={IF:8.9},
@@ -118,7 +123,8 @@ Buttons:
 @article{sikdar2022attributed,
   title={{Attributed} {Graph} {Modeling} with {Vertex} {Replacement} {Grammars}},
   author={Sikdar, Satyaki and Shah, Neil and Weninger, Tim},
-  journal={Web Search and Data Mining (WSDM)},
+  journal={Web Search and Data Mining},
+  abbr = {WSDM},
   year={2022},
   addendum={AR:18\%},
   bibtex_show = {true},
@@ -127,7 +133,8 @@ Buttons:
 @article{erkol2023consistency,
   title={{Consistency} {Pays} off in {Science}},
   author={Erkol, {\c{S}}irag and Sikdar, Satyaki and Radicchi, Filippo and Fortunato, Santo},
-  journal={Quantitative Science Studies (QSS)},
+  journal={Quantitative Science Studies},
+  abbr = {QSS},
   year={2023},
   publisher={MIT Press},
   bibtex_show = {true},
@@ -206,6 +213,7 @@ Buttons:
   addendum={IF:4.6},
   selected={true}, 
   bibtex_show = {true},
+  abbr = {Sci Rep},
   n_first_authors={2},
 }
 
