added PDFs of slides and posters

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,15 +17,45 @@ Buttons:
 - `website`: Adds a "Website" button redirecting to the specified link
 
 
+
 @article{basuchowdhuri2016detecting,
  author = {Basuchowdhuri, Partha and Sikdar, Satyaki and Shreshtha, Sonu and Majumder, Subhashis},
  title = {{Detecting} {Community} {Structures} in {Social} {Networks} by {Graph} {Sparsification}},
  journal = {ACM IKDD Conference on Data Science},
  year = {2016},
- addendum = {AR:5\%},
  bibtex_show = {true},
  url = {https://dl.acm.org/doi/10.1145/2888451.2888479},
- abbr = {CODS 2016},
+ html = {https://dl.acm.org/doi/10.1145/2888451.2888479},
+ abbr = {CODS},
+ code = {https://github.com/satyakisikdar/spanner-comm-detection},
+}
+
+
+@article{pennycuff2018synchronous,
+ author = {Pennycuff, Corey and Sikdar, Satyaki and Vajiac, Catalina and Chiang, David and Weninger, Tim},
+ title = {{Synchronous} {Hyperedge} {Replacement} {Graph} {Grammars}},
+ journal = {International Conference on Graph Transformation},
+ abbr = {ICGT},
+ year = {2018},
+ bibtex_show = {true},
+ html = {https://link.springer.com/chapter/10.1007/978-3-319-92991-0_2},
+ url = {https://link.springer.com/chapter/10.1007/978-3-319-92991-0_2},
+ code = {https://github.com/tweninger/PSHRG},
+ poster = {shrg-poster.pdf},
+}
+
+@article{sikdar2019modeling,
+ author = {Sikdar, Satyaki and Hibshman, Justus and Weninger, Tim},
+ title = {{Modeling} {Graphs} with {Vertex} {Replacement} {Grammars}},
+ journal = {IEEE International Conference on Data Mining},
+ abbr = {ICDM},
+ year = {2019},
+ code = {https://github.com/satyakisikdar/CNRG},
+ html = {https://ieeexplore.ieee.org/document/8970955/},
+ url = {https://ieeexplore.ieee.org/document/8970955/},
+ arxiv = {https://arxiv.org/abs/1908.03837},
+ bibtex_show = {true},
+ poster = {vrg-poster.pdf},
 }
 
 @article{basuchowdhuri2019fast,
@@ -34,19 +64,14 @@ Buttons:
  journal = {Knowledge and Information Systems},
  year = {2018},
  publisher = {Springer},
- addendum = {IF:2.7},
  code = {https://github.com/sna-lincom/LINCOM},
+ url = {https://link.springer.com/article/10.1007/s10115-018-1209-7},
+ html = {https://link.springer.com/article/10.1007/s10115-018-1209-7},
  bibtex_show = {true},
  abbr = {KAIS},
+ arxiv = {1707.04459},
 }
 
-@article{sikdar2021scalable,
- author = {Sikdar, Satyaki},
- title = {{Scalable} and {Interpretable} {Graph} {Modeling} with {Graph} {Grammars}},
- abbr = {PhD thesis},
- url = {https://curate.nd.edu/show/br86b280953},
- year = {2021},
-}
 
 
 @article{hibshman2019towards,
@@ -57,19 +82,13 @@ Buttons:
  year = {2019},
  addendum = {AR:19\%},
  bibtex_show = {true},
+ arxiv = {1910.08579},
+ html = {https://www.computer.org/csdl/proceedings-article/big-data/2019/09006204/1hJsweHCUP6},
+ url = {https://www.computer.org/csdl/proceedings-article/big-data/2019/09006204/1hJsweHCUP6},
 }
 
-@article{hibshman2021joint,
- author = {Hibshman, Justus Isaiah and Cedre, Daniel Gonzalez and Sikdar, Satyaki and Weninger, Tim},
- title = {{Joint} {Subgraph}-to-{Subgraph} {Transitions}: {Generalizing} {Triadic} {Closure} for {Powerful} and {Interpretable} {Graph} {Modeling}},
- journal = {ACM International Conference on Web Search and Data Mining},
- year = {2021},
- addendum = {AR:18\%},
- bibtex_show = {true},
- abbr = {WSDM},
-}
 
-@incollection{kogge2019a,
+incollection{kogge2019a,
  author = {Sikdar, Satyaki},
  editor = {Kogge, Peter M.},
  booktitle = {A Survey of Graph Kernels},
@@ -79,7 +98,7 @@ Buttons:
  doi = {10.7274/r0-e7wb-da60},
 }
 
-@incollection{kogge2019b,
+incollection{kogge2019b,
  author = {Sikdar, Satyaki},
  editor = {Kogge, Peter M.},
  booktitle = {A Survey of Graph Processing Paradigms},
@@ -89,24 +108,28 @@ Buttons:
  doi = {10.7274/r0-z6dc-9c71},
 }
 
-@article{pennycuff2018synchronous,
- author = {Pennycuff, Corey and Sikdar, Satyaki and Vajiac, Catalina and Chiang, David and Weninger, Tim},
- title = {{Synchronous} {Hyperedge} {Replacement} {Graph} {Grammars}},
- journal = {International Conference on Graph Transformation},
- abbr = {ICGT},
- year = {2018},
- bibtex_show = {true},
+@article{sikdar2021scalable,
+ author = {Sikdar, Satyaki},
+ title = {{Scalable} and {Interpretable} {Graph} {Modeling} with {Graph} {Grammars}},
+ abbr = {PhD thesis},
+ url = {https://curate.nd.edu/show/br86b280953},
+ year = {2021},
+ slides = {defense-slides.pdf},
 }
 
-@article{sikdar2019modeling,
- author = {Sikdar, Satyaki and Hibshman, Justus and Weninger, Tim},
- title = {{Modeling} {Graphs} with {Vertex} {Replacement} {Grammars}},
- journal = {IEEE International Conference on Data Mining},
- abbr = {ICDM},
- year = {2019},
- addendum = {AR:9\%},
- code = {https://github.com/satyakisikdar/CNRG},
+
+@article{hibshman2021joint,
+ author = {Hibshman, Justus Isaiah and Cedre, Daniel Gonzalez and Sikdar, Satyaki and Weninger, Tim},
+ title = {{Joint} {Subgraph}-to-{Subgraph} {Transitions}: {Generalizing} {Triadic} {Closure} for {Powerful} and {Interpretable} {Graph} {Modeling}},
+ journal = {ACM International Conference on Web Search and Data Mining},
+ year = {2021},
+ addendum = {AR:18\%},
  bibtex_show = {true},
+ abbr = {WSDM},
+ html = {https://dl.acm.org/doi/10.1145/3437963.3441817?cid=99659685817},
+ url = {https://dl.acm.org/doi/10.1145/3437963.3441817?cid=99659685817},
+ arxiv = {2009.06770},
+ code = {https://github.com/SteveWillowby/Subgraph-Subgraph-Transitions},
 }
 
 @article{sikdar2022infinity,
@@ -116,8 +139,11 @@ Buttons:
   abbr = {TKDE},
   year={2022},
   publisher={IEEE}, 
-  addendum={IF:8.9},
   bibtex_show = {true},
+  url = {https://ieeexplore.ieee.org/document/9669099},
+  html = {https://ieeexplore.ieee.org/document/9669099},
+  arxiv = {2009.08925},
+  code = {https://github.com/satyakisikdar/infinity-mirror},
 }
 
 @article{sikdar2022attributed,
@@ -126,8 +152,12 @@ Buttons:
   journal={Web Search and Data Mining},
   abbr = {WSDM},
   year={2022},
-  addendum={AR:18\%},
   bibtex_show = {true},
+  url = {https://dl.acm.org/doi/10.1145/3488560.3498492},
+  html = {https://dl.acm.org/doi/10.1145/3488560.3498492},
+  arxiv = {2110.06410},
+  code = {https://github.com/satyakisikdar/Attributed-VRG},
+  slides = {avrg-poster.pdf},
 }
 
 @article{erkol2023consistency,
@@ -139,6 +169,48 @@ Buttons:
   publisher={MIT Press},
   bibtex_show = {true},
   abbr = {QSS},
+  arxiv = {2210.08440},
+  url = {https://direct.mit.edu/qss/article/doi/10.1162/qss_a_00252/115369/Consistency-pays-off-in-science},
+  html = {https://direct.mit.edu/qss/article/doi/10.1162/qss_a_00252/115369/Consistency-pays-off-in-science},
+  code = {https://github.com/siragerkol/Consistency-pays-off-in-science},
+  website = {https://e-index.net/},
+}
+
+@article{ghavasieh2023persistent,
+  title={Persistent {Energy} {Localization} {Determines} the {Mesoscale} {Functional} {Organization} of {Complex} {Networks}},
+  author={Sikdar, Satyaki and Ghavasieh, Arsham and De Domenico, Manlio and Fortunato, Santo},
+  journal={Forthcoming},
+  year={2024},
+  keywords={preprint},
+  bibtex_show = {true},
+  n_first_authors={2},
+}
+
+
+@article{venturini2023collaboration,
+  title={{Collaboration} and {Topic} {Switches} in {Science}},
+  author={Sikdar, Satyaki and Venturini, Sara and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo},
+  journal={Scientific Reports (to appear)},
+  year={2023},
+  keywords={preprint},
+  selected={true}, 
+  bibtex_show = {true},
+  abbr = {Sci Rep},
+  n_first_authors={2},
+  arxiv = {2304.06826},
+  code = {https://github.com/satyakisikdar/Collaboration-Topic-Switches},
+  slides = {topic-slides.pdf},
+  poster = {topic-poster.pdf},
+}
+
+@article{venturini2023covidpre,
+  title={The {COVID}-19 {Research} {Outbreak}: {How} the {Pandemic} {Culminated} in a {Surge} of {New} {Researchers}},
+  author={Sikdar, Satyaki and Venturini, Sara and Charpignon, Marie Laure and Kumar, Sagar and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo and Majumder, Maimuna S.},
+  howpublished={Under review at Science},
+  year={2023},
+  keywords={preprint},
+  bibtex_show = {false},
+  n_first_authors={2},
 }
 
 
@@ -187,42 +259,4 @@ Buttons:
   howpublished={International Conference on Science of Science and Innvoation (ICSSI), Contributed Talk},
   year={2023},
   bibtex_show = {true},
-}
-
-
-% put the preprints here 
-
-@article{ghavasieh2023persistent,
-  title={Persistent {Energy} {Localization} {Determines} the {Mesoscale} {Functional} {Organization} of {Complex} {Networks}},
-  author={Sikdar, Satyaki and Ghavasieh, Arsham and De Domenico, Manlio and Fortunato, Santo},
-  journal={Forthcoming},
-  year={2024},
-  keywords={preprint},
-  bibtex_show = {true},
-  n_first_authors={2},
-}
-
-
-@article{venturini2023collaboration,
-  title={{Collaboration} and {Topic} {Switches} in {Science}},
-  author={Sikdar, Satyaki and Venturini, Sara and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo},
-  %howpublished={arXiv preprint arXiv:2304.06826}, 
-  journal={Scientific Reports (to appear)},
-  year={2023},
-  keywords={preprint},
-  addendum={IF:4.6},
-  selected={true}, 
-  bibtex_show = {true},
-  abbr = {Sci Rep},
-  n_first_authors={2},
-}
-
-@article{venturini2023covidpre,
-  title={The {COVID}-19 {Research} {Outbreak}: {How} the {Pandemic} {Culminated} in a {Surge} of {New} {Researchers}},
-  author={Sikdar, Satyaki and Venturini, Sara and Charpignon, Marie Laure and Kumar, Sagar and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo and Majumder, Maimuna S.},
-  howpublished={Under review at Science},
-  year={2023},
-  keywords={preprint},
-  bibtex_show = {true},
-  n_first_authors={2},
 }
