added link to diss

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -113,6 +113,7 @@ incollection{kogge2019b,
  title = {{Scalable} and {Interpretable} {Graph} {Modeling} with {Graph} {Grammars}},
  abbr = {PhD thesis},
  url = {https://curate.nd.edu/show/br86b280953},
+ html = {https://curate.nd.edu/show/br86b280953},
  year = {2021},
  slides = {defense-slides.pdf},
 }
@@ -162,7 +163,7 @@ incollection{kogge2019b,
 
 @article{erkol2023consistency,
   title={{Consistency} {Pays} off in {Science}},
-  author={Erkol, {\c{S}}irag and Sikdar, Satyaki and Radicchi, Filippo and Fortunato, Santo},
+  author={Erkol, Sirag and Sikdar, Satyaki and Radicchi, Filippo and Fortunato, Santo},
   journal={Quantitative Science Studies},
   abbr = {QSS},
   year={2023},
