trying out different template for bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -202,6 +202,7 @@ incollection{kogge2019b,
   code = {https://github.com/satyakisikdar/Collaboration-Topic-Switches},
   slides = {topic-slides.pdf},
   poster = {topic-poster.pdf},
+  award = {test test},
 }
 
 @article{venturini2023covidpre,
