removed repeated entries for abstracts

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -183,7 +183,7 @@ incollection{kogge2019b,
   journal={Forthcoming},
   year={2024},
   keywords={preprint},
-  bibtex_show = {true},
+  bibtex_show = {false},
   n_first_authors={2},
 }
 
@@ -202,10 +202,10 @@ incollection{kogge2019b,
   code = {https://github.com/satyakisikdar/Collaboration-Topic-Switches},
   slides = {topic-slides.pdf},
   poster = {topic-poster.pdf},
-  award = {test test},
+  award = {Plenary talk at IC2S2 2023 [AR: 1.75%]<br>Contributed talks at NetSci 2023, ICSSI 2023},
 }
 
-@article{venturini2023covidpre,
+@article{venturini2023covid,
   title={The {COVID}-19 {Research} {Outbreak}: {How} the {Pandemic} {Culminated} in a {Surge} of {New} {Researchers}},
   author={Sikdar, Satyaki and Venturini, Sara and Charpignon, Marie Laure and Kumar, Sagar and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo and Majumder, Maimuna S.},
   howpublished={Under review at Science},
@@ -213,52 +213,6 @@ incollection{kogge2019b,
   keywords={preprint},
   bibtex_show = {false},
   n_first_authors={2},
+  award = {Contributed talks at IC2S2 2023, ICSSI 2023},
 }
 
-
-@misc{venturini2023collaborationIC2S2,
-  title={{Collaboration} and {Topic} {Switches} in {Science}},
-  author={Sikdar, Satyaki and Venturini, Sara and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo},
-  author+an = {1=jointfirst;2=jointfirst},
-  howpublished={International Conference on Computational Social Science (IC\textsuperscript{2}S\textsuperscript{2}), Plenary Talk},
-  year={2023},
-  addendum={AR:1.75\%},
-  bibtex_show = {true},
-}
-
-@misc{venturini2023collaborationICSSI,
-  title={{Collaboration} and {Topic} {Switches} in {Science}},
-  author={Sikdar, Satyaki and Venturini, Sara and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo},
-  author+an = {1=jointfirst;2=jointfirst},
-  howpublished={International Conference on Science of Science and Innvoation (ICSSI), Contributed Talk},
-  year={2023},
-  bibtex_show = {true},
-}
-
-@misc{venturini2023collaborationNetsci,
-  title={{Collaboration} and {Topic} {Switches} in {Science}},
-  author={Sikdar, Satyaki and Venturini, Sara and  Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo},
-  author+an = {1=jointfirst;2=jointfirst},
-  howpublished={International Conference on Network Science (NetSci), Contributed Talk},
-  year={2023},
-  bibtex_show = {true},
-}
-
-
-@misc{venturini2023covidIC2S2,
-  title={The {COVID}-19 {Research} {Outbreak}: {How} the {Pandemic} {Culminated} in a {Surge} of {New} {Researchers}},
-  author={Sikdar, Satyaki and Venturini, Sara and Charpignon, Marie Laure and Kumar, Sagar and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo and Majumder, Maimuna S.},
-  howpublished={International Conference on Computational Social Science (IC\textsuperscript{2}S\textsuperscript{2}), Contributed Talk},
-  year={2023},
-  addendum={AR:31\%},
-  author+an = {1=jointfirst;2=jointfirst},
-  bibtex_show = {true},
-}
-
-@misc{venturini2023covidICSSI,
-  title={The {COVID}-19 {Research} {Outbreak}: {How} the {Pandemic} {Culminated} in a {Surge} of {New} {Researchers}},
-  author={Sikdar, Satyaki and Venturini, Sara and Charpignon, Marie Laure and Kumar, Sagar and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo and Majumder, Maimuna S.},
-  howpublished={International Conference on Science of Science and Innvoation (ICSSI), Contributed Talk},
-  year={2023},
-  bibtex_show = {true},
-}
