deleted bib entries for abstracts. added ic2s2 slides for covid newcomers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -183,7 +183,6 @@ incollection{kogge2019b,
   journal={Forthcoming},
   year={2024},
   keywords={preprint},
-  bibtex_show = {false},
   n_first_authors={2},
 }
 
@@ -211,8 +210,8 @@ incollection{kogge2019b,
   howpublished={Under review at Science},
   year={2023},
   keywords={preprint},
-  bibtex_show = {false},
   n_first_authors={2},
   award = {Contributed talks at IC2S2 2023, ICSSI 2023},
+  slides = {newcomers-ic2s2.pdf},
 }
 
