updated bib for topic switches paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -190,7 +190,7 @@ incollection{kogge2019b,
 @article{venturini2023collaboration,
   title={{Collaboration} and {Topic} {Switches} in {Science}},
   author={Sikdar, Satyaki and Venturini, Sara and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo},
-  journal={Scientific Reports (to appear)},
+  journal={Scientific Reports},
   year={2024},
   keywords={preprint},
   selected={true}, 
