added url to SciRep url

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -198,6 +198,7 @@ incollection{kogge2019b,
   abbr = {Sci Rep},
   n_first_authors={2},
   arxiv = {2304.06826},
+  url = {https://www.nature.com/articles/s41598-024-51606-6},
   code = {https://github.com/satyakisikdar/Collaboration-Topic-Switches},
   slides = {topic-slides.pdf},
   poster = {topic-poster.pdf},
